--- a/src/components/admin/AdminSchedule/AdminSchedule.css
+++ b/src/components/admin/AdminSchedule/AdminSchedule.css
@@ -55,7 +55,7 @@
 }
 
 .rbc-event {
-  z-index: 1;
+  z-index: 300;
   position: relative;
   overflow: hidden;
 }
